--- a/src/scss/app.scss
+++ b/src/scss/app.scss
@@ -27,3 +27,9 @@ html {
   font-size: 10rem;
   flex-flow: column;
 }
+
+.container{
+  display: grid;
+  grid-template-columns: repeat(3,1fr);
+  gap: 1rem;
+}
